--- a/index.html
+++ b/index.html
@@ -7,19 +7,22 @@
     <script src="https://d3js.org/d3.v4.js"></script>
     <script src="http://d3js.org/topojson.v1.min.js"></script>
     <script src="http://d3js.org/queue.v1.min.js"></script>
-    <script src="js/d3-legend.js"></script>
+    <script src="./js/core.min.js"></script>
     <script src="d3-scale-radial.js"></script>
     <script src="./globe.js"></script>
     <script src="./stacked-bar-chart.js"></script>
+    <script src="./legend.js"></script>
     <link rel="stylesheet" href="css/styles.css">
 
 </head>
 
 <body>
 
-    <div id="info-box">
-        <h1>A world of happiness</h1>
-    </div>
+
+    <h1>A world of happiness</h1>
+    <!-- <h2>According to xx, these factors combined bring us happiness. Explore the map to see how your country measure up?</h2> -->
+    <div id="legend"></div>
+
     <div>
         <svg width="700" height="700"></svg>
     </div>
@@ -32,6 +35,7 @@
 
         var globe = new Globe(svg, innerRadius - 2)
         var bar = new StackedBarChart(svg, innerRadius)
+        var legend = new Legend()
 
         function highlightCountry(d) {
             d3.selectAll('.highlight').classed("highlight", false);
