--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
 
 <head>
     <meta charset="utf-8">
+    <meta name="description" content="A world of happiness - data visualisation">
+    <meta name="keywords" content="data, visualisation">
+    <meta name="author" content="Ben Scott &amp; Ivvet Modinous">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <title>A world of happiness</title>
 
     <script src="https://d3js.org/d3.v4.js"></script>
     <script src="http://d3js.org/topojson.v1.min.js"></script>
