Update colour scheme

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="description" content="A world of happiness - data visualisation">
+    <meta name="description" content="A World of Happiness - data visualisation">
     <meta name="keywords" content="data, visualisation">
     <meta name="author" content="Ben Scott &amp; Ivvet Modinous">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>A world of happiness</title>
+    <title>A World of Happiness</title>
 
     <script src="./js/dist/d3.v4.js"></script>
     <script src="./js/dist/topojson.v1.min.js"></script>
