--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <script src="./js/globe.js"></script>
     <script src="./js/stacked-bar-chart.js"></script>
 
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/styles.css?q=1">
 
 </head>
 
