--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="description" content="A World of Happiness - data visualisation">
     <meta name="keywords" content="data, visualisation">
-    <meta name="author" content="Ben Scott &amp; Ivvet Modinous">
+    <meta name="author" content="Ben Scott &amp; Ivvet Modinou">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>A World of Happiness</title>
